<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:fontFamily="@font/bold"
        android:text="@string/profile"
        android:textColor="@color/black"
        android:textSize="@dimen/dp_20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView5"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_marginTop="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView19">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/imageView10"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
           />
        </LinearLayout>


    </com.google.android.material.card.MaterialCardView>


    <TextView
        android:id="@+id/follower"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_16"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/medium"
        tools:text="Followers 0"
        android:textColor="@color/text_gray"
        android:textSize="@dimen/dp_14"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/user_name" />

    <TextView
        android:id="@+id/following"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_16"
        android:fontFamily="@font/medium"
        tools:text="Following 0"
        android:textColor="@color/text_gray"
        android:textSize="@dimen/dp_14"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/user_name" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/name_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/follower">

        <ImageView
            android:id="@+id/ic_phone"
            android:layout_width="26dp"
            android:layout_height="28dp"
            android:layout_marginStart="18dp"
            android:src="@drawable/ic_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/under_line_width"
            android:layout_marginStart="14dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="14dp"
            android:background="@color/under_line"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name_txt" />

        <EditText
            android:id="@+id/name_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_12"
            android:layout_marginTop="4dp"
            android:background="@color/white"
            android:ems="10"
            android:fontFamily="@font/regular"
            android:focusable="false"
            android:hint="@string/name"
            android:inputType="text"
            android:textColor="@color/black"
            android:textColorHint="@color/hint_color"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/ic_phone"
            app:layout_constraintStart_toEndOf="@+id/ic_phone"
            app:layout_constraintTop_toTopOf="@+id/ic_phone" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/email_box_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_box">

        <ImageView
            android:id="@+id/ic_email"
            android:layout_width="26dp"
            android:layout_height="28dp"
            android:layout_marginStart="18dp"
            android:src="@drawable/ic_at"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/under_line_width"
            android:layout_marginStart="14dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="14dp"
            android:background="@color/under_line"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_txt" />

        <EditText
            android:id="@+id/email_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_12"
            android:layout_marginTop="4dp"
            android:background="@color/white"
            android:ems="10"
            android:fontFamily="@font/regular"
            android:hint="@string/email"
            android:focusable="false"
            android:inputType="text"
            android:textColor="@color/black"
            android:textColorHint="@color/hint_color"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/ic_email"
            app:layout_constraintStart_toEndOf="@+id/ic_email"
            app:layout_constraintTop_toTopOf="@+id/ic_email" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/password_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_box_1">

        <ImageView
            android:id="@+id/ic_password"
            android:layout_width="26dp"
            android:layout_height="28dp"
            android:layout_marginStart="18dp"
            android:src="@drawable/ic_phone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/under_line_width"
            android:layout_marginStart="14dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="14dp"
            android:background="@color/under_line"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phone_text" />

        <EditText
            android:id="@+id/phone_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_12"
            android:layout_marginTop="4dp"

            android:background="@color/white"
            android:ems="10"
            android:fontFamily="@font/regular"
            android:hint="Phone number"
            android:inputType="number"
            android:textColor="@color/black"
            android:focusable="false"
            android:textColorHint="@color/hint_color"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/ic_password"
            app:layout_constraintStart_toEndOf="@+id/ic_password"
            app:layout_constraintTop_toTopOf="@+id/ic_password" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_24"
        android:backgroundTint="#77B156"
        android:fontFamily="@font/medium"
        android:text="@string/logout"
        app:cornerRadius="8dp"
        app:layout_constraintTop_toBottomOf="@+id/email_box_1"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="TextView"
        android:fontFamily="@font/semibold"
        android:textColor="@color/black"
        android:layout_margin="@dimen/dp_16"
        app:layout_constraintEnd_toEndOf="@+id/materialCardView5"
        app:layout_constraintStart_toStartOf="@+id/materialCardView5"
        app:layout_constraintTop_toBottomOf="@+id/materialCardView5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="202dp" />
</androidx.constraintlayout.widget.ConstraintLayout>